1.21 port - the full update